--- a/build.gradle
+++ b/build.gradle
@@ -2,10 +2,13 @@
 
 buildscript {
     repositories {
-        jcenter()
+//        jcenter()
+        maven {
+            url "http://127.0.0.1:8081/nexus/content/groups/public/"
+        }
     }
     dependencies {
-        classpath 'com.android.tools.build:gradle:1.2.3'
+        classpath 'com.android.tools.build:gradle:1.1.1'
 
         // NOTE: Do not place your application dependencies here; they belong
         // in the individual module build.gradle files
@@ -14,6 +17,9 @@ buildscript {
 
 allprojects {
     repositories {
-        jcenter()
+        //jcenter()
+        maven {
+            url "http://127.0.0.1:8081/nexus/content/groups/public/"
+        }
     }
 }
