--- a/vitamio/build.gradle
+++ b/vitamio/build.gradle
@@ -8,7 +8,7 @@ android {
     buildToolsVersion "22.0.1"
 
     defaultConfig {
-        minSdkVersion 16
+        minSdkVersion 19
         targetSdkVersion 22
     }
     sourceSets {
@@ -21,6 +21,9 @@ android {
             res.srcDirs = ['res']
         }
 
+        lintOptions {
+            abortOnError false
+        }
     }
 
 }
