--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,9 +1,13 @@
 buildscript {
     repositories {
         maven {
-            url "http://127.0.0.1:8081/nexus/content/groups/public/"
+//            url "http://127.0.0.1:8081/nexus/content/groups/public/"
+            url "http://uk.maven.org/maven2/"
         }
     }
+    //    repositories {
+//        jcenter()
+//    }
     dependencies {
         classpath 'com.android.tools.build:gradle:1.1.1'
     }
@@ -12,7 +16,9 @@ buildscript {
 allprojects {
     repositories {
         maven {
-            url "http://127.0.0.1:8081/nexus/content/groups/public/"
+//            url "http://127.0.0.1:8081/nexus/content/groups/public/"
+            url "http://uk.maven.org/maven2/"
+
         }
     }
 //    repositories {
@@ -58,17 +64,22 @@ dependencies {
     compile 'com.android.support:recyclerview-v7:+'
     compile 'com.android.support:design:22.2.0'
 
-    compile 'com.github.ksoichiro:android-observablescrollview:1.5.2'
-    compile('com.mikepenz:materialdrawer:3.0.9@aar') {
-        transitive = true
-    }
-
-    compile 'com.squareup.okhttp:okhttp:2.4.0'//okhttp
-
     compile 'it.neokree:MaterialNavigationDrawer:1.3.3'
 
 
-    compile 'com.melnykov:floatingactionbutton:1.3.0'
+    compile 'com.squareup.okhttp:okhttp:2.4.0'//okhttp
     compile 'com.google.code.gson:gson:2.3.1'
+
+    compile 'com.melnykov:floatingactionbutton:1.3.0'
+
+    //内存泄露查看
+    debugCompile 'com.squareup.leakcanary:leakcanary-android:1.3.1'
+    releaseCompile 'com.squareup.leakcanary:leakcanary-android-no-op:1.3.1'
+
+    compile 'com.facebook.fresco:fresco:0.5.3+'
+    compile 'com.facebook.fresco:imagepipeline-okhttp:0.5.3+'
+
+
+    compile 'com.koushikdutta.ion:ion:2.+'
 
 }
