--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,31 +1,3 @@
-buildscript {
-    repositories {
-        maven {
-//            url "http://127.0.0.1:8081/nexus/content/groups/public/"
-            url "http://uk.maven.org/maven2/"
-        }
-    }
-    //    repositories {
-//        jcenter()
-//    }
-    dependencies {
-        classpath 'com.android.tools.build:gradle:1.1.1'
-    }
-}
-
-allprojects {
-    repositories {
-        maven {
-//            url "http://127.0.0.1:8081/nexus/content/groups/public/"
-            url "http://uk.maven.org/maven2/"
-
-        }
-    }
-//    repositories {
-//        jcenter()
-//    }
-}
-
 apply plugin: 'com.android.application'
 
 android {
@@ -62,10 +34,8 @@ dependencies {
     compile 'com.android.support:appcompat-v7:22.1.0'
     compile 'com.android.support:support-v4:22.0.0'
     compile 'com.android.support:recyclerview-v7:+'
+    compile 'com.android.support:cardview-v7:+'
     compile 'com.android.support:design:22.2.0'
-
-    compile 'it.neokree:MaterialNavigationDrawer:1.3.3'
-
 
     compile 'com.squareup.okhttp:okhttp:2.4.0'//okhttp
     compile 'com.google.code.gson:gson:2.3.1'
@@ -79,7 +49,5 @@ dependencies {
     compile 'com.facebook.fresco:fresco:0.5.3+'
     compile 'com.facebook.fresco:imagepipeline-okhttp:0.5.3+'
 
-
-    compile 'com.koushikdutta.ion:ion:2.+'
 
 }
