--- a/build.gradle
+++ b/build.gradle
@@ -4,7 +4,9 @@ buildscript {
     repositories {
 //        jcenter()
         maven {
-            url "http://127.0.0.1:8081/nexus/content/groups/public/"
+//            url "http://127.0.0.1:8081/nexus/content/groups/public/"
+            url "http://uk.maven.org/maven2/"
+//            url "http://repo1.maven.org/maven2/"
         }
     }
     dependencies {
@@ -17,9 +19,11 @@ buildscript {
 
 allprojects {
     repositories {
-        //jcenter()
+//        jcenter()
         maven {
-            url "http://127.0.0.1:8081/nexus/content/groups/public/"
+//            url "http://127.0.0.1:8081/nexus/content/groups/public/"
+            url "http://uk.maven.org/maven2/"
+//            url "http://repo1.maven.org/maven2/"
         }
     }
 }
