--- a/app/build.gradle
+++ b/app/build.gradle
@@ -46,8 +46,10 @@ dependencies {
     debugCompile 'com.squareup.leakcanary:leakcanary-android:1.3.1'
     releaseCompile 'com.squareup.leakcanary:leakcanary-android-no-op:1.3.1'
 
-    compile 'com.facebook.fresco:fresco:0.5.3+'
-    compile 'com.facebook.fresco:imagepipeline-okhttp:0.5.3+'
+    compile 'com.facebook.fresco:fresco:0.6.0+'
+    compile 'com.facebook.fresco:imagepipeline-okhttp:0.6.0+'
 
+
+    compile 'com.jakewharton:butterknife:7.0.1'
 
 }
