--- a/app/build.gradle
+++ b/app/build.gradle
@@ -31,11 +31,14 @@ android {
 
 dependencies {
     compile fileTree(include: ['*.jar'], dir: 'libs')
-    compile 'com.android.support:appcompat-v7:22.1.0'
-    compile 'com.android.support:support-v4:22.0.0'
+    compile 'com.android.support:appcompat-v7:+'
+    compile 'com.android.support:support-v4:+'
     compile 'com.android.support:recyclerview-v7:+'
     compile 'com.android.support:cardview-v7:+'
+    compile 'com.android.support:gridlayout-v7:22.2.0'
+
     compile 'com.android.support:design:22.2.0'
+    compile 'com.android.support:percent:+'
 
     compile 'com.squareup.okhttp:okhttp:2.4.0'//okhttp
     compile 'com.google.code.gson:gson:2.3.1'
@@ -48,7 +51,6 @@ dependencies {
 
     compile 'com.facebook.fresco:fresco:0.6.0+'
     compile 'com.facebook.fresco:imagepipeline-okhttp:0.6.0+'
-
 
     compile 'com.jakewharton:butterknife:7.0.1'
 
