--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,6 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
-<manifest package="org.succlz123.AxBTube"
-          xmlns:android="http://schemas.android.com/apk/res/android">
+<manifest
+    package="org.succlz123.AxBTube"
+    xmlns:android="http://schemas.android.com/apk/res/android">
 
     <!-- network access -->
     <uses-permission android:name="android.permission.INTERNET"/>
@@ -18,7 +19,7 @@
         android:allowBackup="true"
         android:icon="@drawable/ic_launcher"
         android:label="@string/app_name"
-        android:theme="@style/AppTheme">
+        android:theme="@style/MDTheme">
         <activity
             android:name=".ui.activity.MainActivity"
             android:label="@string/app_name"
@@ -29,6 +30,11 @@
                 <category android:name="android.intent.category.LAUNCHER"/>
             </intent-filter>
         </activity>
+
+        <activity
+            android:name=".ui.activity.acfun.AcPartitionActivity">
+        </activity>
+
     </application>
 
 </manifest>
