update ac recommend and ac api

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -35,6 +35,10 @@
             android:name=".ui.activity.acfun.AcPartitionActivity">
         </activity>
 
+        <activity
+            android:name=".ui.activity.acfun.AcContentActivity">
+        </activity>
+
     </application>
 
 </manifest>
