--- a/app/build.gradle
+++ b/app/build.gradle
@@ -31,11 +31,12 @@ android {
 
 dependencies {
     compile fileTree(include: ['*.jar'], dir: 'libs')
+    compile project(':vitamio')
+
     compile 'com.android.support:appcompat-v7:+'
     compile 'com.android.support:support-v4:+'
     compile 'com.android.support:recyclerview-v7:+'
     compile 'com.android.support:cardview-v7:+'
-    compile 'com.android.support:gridlayout-v7:22.2.0'
 
     compile 'com.android.support:design:22.2.0'
     compile 'com.android.support:percent:+'
