--- a/app/build.gradle
+++ b/app/build.gradle
@@ -44,6 +44,8 @@ dependencies {
     compile 'com.squareup.okhttp:okhttp:2.4.0'//okhttp
     compile 'com.google.code.gson:gson:2.3.1'
 
+    compile 'com.github.ctiao:dfm:0.3.4'
+
     compile 'com.melnykov:floatingactionbutton:1.3.0'
 
     //内存泄露查看
