--- a/app/build.gradle
+++ b/app/build.gradle
@@ -40,7 +40,6 @@ dependencies {
 
     compile 'com.android.support:design:+'
 
-    compile 'com.squareup.okhttp:okhttp:2.4.0'//okhttp
     compile 'com.google.code.gson:gson:2.3.1'
 
     compile 'com.github.ctiao:dfm:0.3.4'
@@ -57,5 +56,7 @@ dependencies {
     compile 'com.jakewharton:butterknife:7.0.1'
 
     compile 'com.squareup.retrofit:retrofit:1.9.0'
+    compile 'com.squareup.okhttp:okhttp:2.4.0'
+    compile 'com.squareup.okhttp:okhttp-urlconnection:2.4.0'
 
 }
