--- a/build.gradle
+++ b/build.gradle
@@ -20,10 +20,10 @@ buildscript {
 allprojects {
     repositories {
 //        jcenter()
-        maven {
+//        maven {
 //            url "http://127.0.0.1:8081/nexus/content/groups/public/"
             url "http://uk.maven.org/maven2/"
 //            url "http://repo1.maven.org/maven2/"
-        }
+//        }
     }
 }
