--- a/build.gradle
+++ b/build.gradle
@@ -2,12 +2,12 @@
 
 buildscript {
     repositories {
-//        jcenter()
-        maven {
+        jcenter()
+//        maven {
 //            url "http://127.0.0.1:8081/nexus/content/groups/public/"
-            url "http://uk.maven.org/maven2/"
+//            url "http://uk.maven.org/maven2/"
 //            url "http://repo1.maven.org/maven2/"
-        }
+//        }
     }
     dependencies {
         classpath 'com.android.tools.build:gradle:1.2.3'
@@ -19,10 +19,10 @@ buildscript {
 
 allprojects {
     repositories {
-//        jcenter()
+        jcenter()
 //        maven {
 //            url "http://127.0.0.1:8081/nexus/content/groups/public/"
-            url "http://uk.maven.org/maven2/"
+//            url "http://uk.maven.org/maven2/"
 //            url "http://repo1.maven.org/maven2/"
 //        }
     }
