update ac content info with download checkBox

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -47,6 +47,10 @@
             android:screenOrientation="landscape">
         </activity>
 
+        <activity
+            android:name=".ui.activity.acfun.DownLoadActivity">
+        </activity>
+
     </application>
 
 </manifest>
