--- a/app/build.gradle
+++ b/app/build.gradle
@@ -48,4 +48,8 @@ dependencies {
     compile 'com.squareup.okhttp:okhttp:2.4.0'
     compile 'com.squareup.okhttp:okhttp-urlconnection:2.4.0'
     compile 'com.github.snowdream.android.app:downloader:1.0'
+
+    compile 'cn.aigestudio.downloader:Downloader:1.3.7'
+
+    compile 'org.litepal.android:core:1.2.1'
 }
