--- a/build.gradle
+++ b/build.gradle
@@ -1,29 +1,26 @@
-// Top-level build file where you can add configuration options common to all sub-projects/modules.
-
 buildscript {
     repositories {
         jcenter()
-//        maven {
+        maven {
 //            url "http://127.0.0.1:8081/nexus/content/groups/public/"
 //            url "http://uk.maven.org/maven2/"
 //            url "http://repo1.maven.org/maven2/"
-//        }
+            url 'http://oss.jfrog.org/artifactory/oss-snapshot-local'
+        }
     }
     dependencies {
         classpath 'com.android.tools.build:gradle:1.2.3'
-
-        // NOTE: Do not place your application dependencies here; they belong
-        // in the individual module build.gradle files
-    }
+      }
 }
 
 allprojects {
     repositories {
         jcenter()
-//        maven {
+        maven {
 //            url "http://127.0.0.1:8081/nexus/content/groups/public/"
 //            url "http://uk.maven.org/maven2/"
 //            url "http://repo1.maven.org/maven2/"
-//        }
+            url 'http://oss.jfrog.org/artifactory/oss-snapshot-local'
+        }
     }
 }
