--- a/app/build.gradle
+++ b/app/build.gradle
@@ -2,7 +2,7 @@ apply plugin: 'com.android.application'
 
 android {
     compileSdkVersion 23
-    buildToolsVersion "23"
+    buildToolsVersion "23.0.1"
     defaultConfig {
         applicationId 'org.succlz123.bluetube.app'
         minSdkVersion 19
@@ -45,11 +45,10 @@ dependencies {
     //    compile 'com.facebook.fresco:imagepipeline-okhttp:0.6.1+'
     compile 'com.jakewharton:butterknife:7.0.1'
     compile 'com.squareup.retrofit:retrofit:1.9.0'
-    compile 'com.squareup.okhttp:okhttp:2.4.0'
-    compile 'com.squareup.okhttp:okhttp-urlconnection:2.4.0'
-
-//    compile 'com.github.snowdream.android.app:downloader:1.0'
-//    compile 'cn.aigestudio.downloader:Downloader:1.3.7'
-
-    compile 'org.litepal.android:core:1.2.1'
+    compile 'com.squareup.okhttp:okhttp:2.5.0'
+    compile 'com.squareup.okhttp:okhttp-urlconnection:2.5.0'
+    compile 'com.github.snowdream.android.app:downloader:1.0'
+    //    compile 'cn.aigestudio.downloader:Downloader:1.3.7'
+//    compile 'io.realm:realm-android:0.82.2'
+    compile project(':nbdownload')
 }
