--- a/app/build.gradle
+++ b/app/build.gradle
@@ -41,10 +41,11 @@ dependencies {
     //内存泄露查看
     debugCompile 'com.squareup.leakcanary:leakcanary-android:1.3.1'
     releaseCompile 'com.squareup.leakcanary:leakcanary-android-no-op:1.3.1'
-    compile 'com.facebook.fresco:fresco:0.6.1+'
+    compile 'com.facebook.fresco:fresco:0.7.0+'
     //    compile 'com.facebook.fresco:imagepipeline-okhttp:0.6.1+'
     compile 'com.jakewharton:butterknife:7.0.1'
-    compile 'com.squareup.retrofit:retrofit:1.9.0'
+    compile 'com.squareup.retrofit:retrofit:2.0.0-beta1'
+    compile 'com.squareup.retrofit:converter-gson:2.0.0-beta1'
     compile 'com.squareup.okhttp:okhttp:2.5.0'
     compile 'com.squareup.okhttp:okhttp-urlconnection:2.5.0'
     compile 'com.github.snowdream.android.app:downloader:1.0'
