--- a/app/build.gradle
+++ b/app/build.gradle
@@ -51,5 +51,12 @@ dependencies {
     compile 'com.github.snowdream.android.app:downloader:1.0'
     //    compile 'cn.aigestudio.downloader:Downloader:1.3.7'
 //    compile 'io.realm:realm-android:0.82.2'
+
+
+    compile 'tv.danmaku.ijk.media:ijkplayer-java:0.4.1'
+    compile 'tv.danmaku.ijk.media:ijkplayer-armv7a:0.4.1'
+
+//    compile project('tv.danmaku.ijk.media:ijkplayer-java:0.4.1')
+//    compile project('tv.danmaku.ijk.media:ijkplayer-armv7a:0.4.1')
     compile project(':nbdownload')
 }
