--- a/build.gradle
+++ b/build.gradle
@@ -1,12 +1,12 @@
 buildscript {
     repositories {
         jcenter()
-        maven {
+//        maven {
 //            url "http://127.0.0.1:8081/nexus/content/groups/public/"
 //            url "http://uk.maven.org/maven2/"
 //            url 'http://repo1.maven.org/maven2/'
-            url 'http://oss.jfrog.org/artifactory/oss-snapshot-local'
-        }
+//            url 'http://oss.jfrog.org/artifactory/oss-snapshot-local'
+//        }
     }
     dependencies {
         classpath 'com.android.tools.build:gradle:1.2.3'
@@ -16,11 +16,11 @@ buildscript {
 allprojects {
     repositories {
         jcenter()
-        maven {
+//        maven {
 //            url "http://127.0.0.1:8081/nexus/content/groups/public/"
 //            url "http://uk.maven.org/maven2/"
 //            url "http://repo1.maven.org/maven2/"
-            url 'http://oss.jfrog.org/artifactory/oss-snapshot-local'
-        }
+//            url 'http://oss.jfrog.org/artifactory/oss-snapshot-local'
+//        }
     }
 }
