--- a/app/build.gradle
+++ b/app/build.gradle
@@ -50,8 +50,6 @@ dependencies {
 
     compile 'com.tencent.bugly:crashreport:1.2.7'
 
-//    compile 'com.google.code.gson:gson:2.3.1'
-
     compile 'com.facebook.fresco:fresco:0.8.1'
     compile 'com.facebook.fresco:imagepipeline-okhttp:0.8.1'
 
@@ -65,17 +63,12 @@ dependencies {
 
     compile 'com.github.ctiao:dfm:0.3.9'
 
-    compile 'tv.danmaku.ijk.media:ijkplayer-java:0.4.4'
-    compile 'tv.danmaku.ijk.media:ijkplayer-armv7a:0.4.4'
-
     compile 'org.succlz123.okdownload:okdownload:0.0.1'
-
-    compile 'com.google.android.exoplayer:exoplayer:r1.5.2'
+    compile 'org.succlz123.okplayer:okplayer:0.0.2'
 
 //    compile 'de.greenrobot:eventbus:2.4.0'
     compile 'com.squareup:otto:1.3.8'
 
     compile 'io.reactivex:rxandroid:1.0.1'
     compile 'io.reactivex:rxjava:1.0.16'
-    compile 'com.devbrackets.android:exomedia:2.4.2'
 }
