--- a/build.gradle
+++ b/build.gradle
@@ -10,6 +10,9 @@ buildscript {
 
 allprojects {
     repositories {
+//        maven {
+//            url  "http://dl.bintray.com/succlz123/maven"
+//        }
         jcenter()
     }
 }
