Fix repeatedly create mainfragment

--- a/build.gradle
+++ b/build.gradle
@@ -10,9 +10,9 @@ buildscript {
 
 allprojects {
     repositories {
-//        maven {
-//            url  "http://dl.bintray.com/succlz123/maven"
-//        }
+        maven {
+            url  "http://dl.bintray.com/succlz123/maven"
+        }
         jcenter()
     }
 }
