--- a/app/build.gradle
+++ b/app/build.gradle
@@ -17,7 +17,7 @@ android {
     }
     buildTypes {
         release {
-            minifyEnabled true
+            minifyEnabled false
             shrinkResources true
             proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.pro'
         }
@@ -64,7 +64,7 @@ dependencies {
     compile 'com.github.ctiao:dfm:0.3.9'
 
     compile 'org.succlz123.okdownload:okdownload:0.0.1'
-    compile 'org.succlz123.okplayer:okplayer:0.0.6'
+    compile 'org.succlz123.okplayer:okplayer:0.0.7'
 
 //    compile 'de.greenrobot:eventbus:2.4.0'
     compile 'com.squareup:otto:1.3.8'
