--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest
-    package="org.succlz123.blueboard"
-    xmlns:android="http://schemas.android.com/apk/res/android">
+        xmlns:android="http://schemas.android.com/apk/res/android"
+        package="org.succlz123.blueboard">
 
     <!-- network access -->
     <uses-permission android:name="android.permission.INTERNET"/>
@@ -15,14 +15,14 @@
     <uses-permission android:name="android.permission.READ_PHONE_STATE"/>
 
     <application
-        android:name=".MyApplication"
-        android:allowBackup="true"
-        android:icon="@mipmap/ic_launcher"
-        android:label="@string/app_name"
-        android:theme="@style/AppTheme">
+            android:name=".MyApplication"
+            android:allowBackup="true"
+            android:icon="@mipmap/ic_launcher"
+            android:label="@string/app_name"
+            android:theme="@style/AppTheme">
 
         <activity
-            android:name=".controller.activity.main.MainActivity">
+                android:name=".controller.activity.main.MainActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN"/>
                 <category android:name="android.intent.category.LAUNCHER"/>
@@ -30,27 +30,28 @@
         </activity>
 
         <activity
-            android:name=".controller.activity.acfun.AcPartitionActivity"
-            android:theme="@style/tabTheme">
+                android:name=".controller.activity.acfun.AcPartitionActivity"
+                android:theme="@style/dyeTheme">
         </activity>
 
         <activity
-            android:name=".controller.activity.acfun.AcContentActivity">
+                android:name=".controller.activity.acfun.AcContentActivity">
         </activity>
 
         <activity
-            android:name=".controller.activity.video.VideoPlayActivity"
-            android:configChanges="orientation|keyboardHidden"
-            android:screenOrientation="landscape">
+                android:name=".controller.activity.video.VideoPlayActivity"
+                android:configChanges="orientation|keyboardHidden"
+                android:screenOrientation="landscape">
 
             <!--android:process=":OkExoPlayer"-->
         </activity>
 
         <activity
-            android:name=".controller.activity.acfun.DownLoadActivity">
+                android:name=".controller.activity.acfun.DownLoadActivity"
+                android:theme="@style/dyeTheme">
         </activity>
 
-        <!--<service android:name=".support.service.DownloadService"/>-->
+        <service android:name=".service.DownloadService"/>
 
     </application>
 
