Fix OkDownload Add stetho Remove butterknife

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -51,7 +51,9 @@
                 android:theme="@style/dyeTheme">
         </activity>
 
-        <service android:name=".service.DownloadService"/>
+        <service android:name=".service.DownloadService"
+                 android:enabled="true"
+                 android:permission="org.succlz123.blueboard.DownloadService"/>
 
     </application>
 
