--- a/app/build.gradle
+++ b/app/build.gradle
@@ -48,12 +48,13 @@ dependencies {
     debugCompile 'com.squareup.leakcanary:leakcanary-android:1.3.1'
     releaseCompile 'com.squareup.leakcanary:leakcanary-android-no-op:1.3.1'
 
-    compile 'com.tencent.bugly:crashreport:1.2.7'
+    compile 'com.tencent.bugly:crashreport:1.2.8'
+
+    compile 'com.facebook.stetho:stetho:1.2.0'
+    compile 'com.facebook.stetho:stetho-okhttp:1.2.0'
 
     compile 'com.facebook.fresco:fresco:0.8.1'
     compile 'com.facebook.fresco:imagepipeline-okhttp:0.8.1'
-
-    compile 'com.jakewharton:butterknife:7.0.1'
 
     compile 'com.squareup.retrofit:retrofit:2.0.0-beta2'
     compile 'com.squareup.retrofit:converter-gson:2.0.0-beta2'
@@ -63,7 +64,6 @@ dependencies {
 
     compile 'com.github.ctiao:dfm:0.3.9'
 
-    compile 'org.succlz123.okdownload:okdownload:0.0.1'
     compile 'org.succlz123.okplayer:okplayer:0.0.7'
 
 //    compile 'de.greenrobot:eventbus:2.4.0'
