--- a/app/build.gradle
+++ b/app/build.gradle
@@ -52,19 +52,18 @@ dependencies {
 
 //    compile 'com.facebook.stetho:stetho:1.2.0'
 //    compile 'com.facebook.stetho:stetho-okhttp:1.2.0'
+    compile 'com.facebook.fresco:fresco:0.9.0'
+    compile 'com.facebook.fresco:imagepipeline-okhttp:0.9.0'
 
-    compile 'com.facebook.fresco:fresco:0.8.1'
-    compile 'com.facebook.fresco:imagepipeline-okhttp:0.8.1'
+    compile 'com.squareup.retrofit2:retrofit:2.0.2'
+    compile 'com.squareup.retrofit2:converter-gson:2.0.2'
+    compile 'com.squareup.retrofit2:adapter-rxjava:2.0.2'
 
-    compile 'com.squareup.retrofit:retrofit:2.0.0-beta2'
-    compile 'com.squareup.retrofit:converter-gson:2.0.0-beta2'
-    compile 'com.squareup.retrofit:adapter-rxjava:2.0.0-beta2'
+    compile 'com.squareup.okhttp3:okhttp:3.2.0'
 
-    compile 'com.squareup.okhttp:okhttp:2.6.0'
+    compile 'com.github.ctiao:dfm:0.4.0'
 
-    compile 'com.github.ctiao:dfm:0.3.9'
-
-    compile 'org.succlz123.okplayer:okplayer:0.0.7'
+    compile 'org.succlz123.okplayer:okplayer:0.0.8'
 
 //    compile 'de.greenrobot:eventbus:2.4.0'
     compile 'com.squareup:otto:1.3.8'
